--- a/locale/flarum-flags.yml
+++ b/locale/flarum-flags.yml
@@ -32,7 +32,7 @@ flarum-flags:
       title: '=> flarum-flags.ref.flagged_posts'
       tooltip: '=> flarum-flags.ref.flagged_posts'
     post:
-      dismiss_flag_button: 'Відхилити позгачення'
+      dismiss_flag_button: 'Відхилити позначення'
       flagged_by_text: 'Позначено користувачем {username}'
       flagged_by_with_reason_text: 'Позначено користувачем {username} як {reason}'
     post_controls:
